updated my teachers components access