@@ -1,7 +1,6 @@
 package com.inkFront.schoolManagement.controllers;
 
 import com.inkFront.schoolManagement.dto.ApiResponse;
-import com.inkFront.schoolManagement.dto.ClassResponseDTO;
 import com.inkFront.schoolManagement.dto.CompleteRegistrationDTO;
 import com.inkFront.schoolManagement.dto.StudentResponseDTO;
 import com.inkFront.schoolManagement.dto.TeacherClassAttendanceRequest;
@@ -9,7 +8,13 @@ import com.inkFront.schoolManagement.dto.TeacherDTO;
 import com.inkFront.schoolManagement.dto.TeacherInvitationDTO;
 import com.inkFront.schoolManagement.dto.TeacherInviteDTO;
 import com.inkFront.schoolManagement.dto.auth.LoginResponse;
-import com.inkFront.schoolManagement.model.*;
+import com.inkFront.schoolManagement.model.Result;
+import com.inkFront.schoolManagement.model.SchoolClass;
+import com.inkFront.schoolManagement.model.Student;
+import com.inkFront.schoolManagement.model.Teacher;
+import com.inkFront.schoolManagement.model.TeacherInvitation;
+import com.inkFront.schoolManagement.model.TeacherSubject;
+import com.inkFront.schoolManagement.model.User;
 import com.inkFront.schoolManagement.repository.ClassRepository;
 import com.inkFront.schoolManagement.repository.StudentRepository;
 import com.inkFront.schoolManagement.repository.TeacherRepository;
@@ -34,10 +39,8 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.time.LocalDate;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/teachers")
@@ -55,6 +58,116 @@ public class TeacherController {
     private final ResultService resultService;
     private final TeacherRepository teacherRepository;
     private final TeacherSubjectRepository teacherSubjectRepository;
+
+    private String normalize(String value) {
+        return value == null ? "" : value.trim().toLowerCase();
+    }
+
+    private String classKey(String className, String arm) {
+        return normalize(className) + "::" + normalize(arm);
+    }
+
+    private Long getCurrentTeacherId() {
+        var currentUser = securityUtils.getCurrentUser();
+
+        if (currentUser == null || currentUser.getTeacher() == null) {
+            throw new RuntimeException("This account is not linked to a teacher");
+        }
+
+        return currentUser.getTeacher().getId();
+    }
+
+    private SchoolClass validateTeacherCanAccessClass(Long classId) {
+        Long teacherId = getCurrentTeacherId();
+
+        SchoolClass schoolClass = classRepository.findByIdWithTeacher(classId)
+                .orElseThrow(() -> new RuntimeException("Class not found"));
+
+        boolean isFormTeacher =
+                schoolClass.getClassTeacher() != null &&
+                        schoolClass.getClassTeacher().getId().equals(teacherId);
+
+        boolean teachesClass = teacherSubjectRepository
+                .findByTeacher_IdOrderByClassNameAscClassArmAsc(teacherId)
+                .stream()
+                .anyMatch(ts ->
+                        normalize(ts.getClassName()).equals(normalize(schoolClass.getClassName())) &&
+                                normalize(ts.getClassArm()).equals(normalize(schoolClass.getArm()))
+                );
+
+        if (!isFormTeacher && !teachesClass) {
+            throw new RuntimeException("You are not assigned to this class");
+        }
+
+        return schoolClass;
+    }
+
+    private SchoolClass validateTeacherOwnsFormClass(Long classId) {
+        Long teacherId = getCurrentTeacherId();
+
+        SchoolClass schoolClass = classRepository.findByIdWithTeacher(classId)
+                .orElseThrow(() -> new RuntimeException("Class not found"));
+
+        if (schoolClass.getClassTeacher() == null
+                || !schoolClass.getClassTeacher().getId().equals(teacherId)) {
+            throw new RuntimeException("Only the form teacher of this class can view class results");
+        }
+
+        return schoolClass;
+    }
+
+    private Map<String, Object> buildTeacherClassResponse(
+            SchoolClass schoolClass,
+            Long currentTeacherId,
+            List<TeacherSubject> teacherSubjects
+    ) {
+        boolean isFormTeacher =
+                schoolClass.getClassTeacher() != null &&
+                        schoolClass.getClassTeacher().getId().equals(currentTeacherId);
+
+        List<String> subjects = teacherSubjects.stream()
+                .filter(ts ->
+                        normalize(ts.getClassName()).equals(normalize(schoolClass.getClassName())) &&
+                                normalize(ts.getClassArm()).equals(normalize(schoolClass.getArm())) &&
+                                ts.getSubject() != null &&
+                                ts.getSubject().getName() != null
+                )
+                .map(ts -> ts.getSubject().getName().trim())
+                .distinct()
+                .sorted()
+                .toList();
+
+        int studentCount = studentRepository
+                .findBySchoolClassIdOrderByLastNameAscFirstNameAsc(schoolClass.getId())
+                .size();
+
+        Map<String, Object> item = new LinkedHashMap<>();
+        item.put("id", schoolClass.getId());
+        item.put("className", schoolClass.getClassName());
+        item.put("arm", schoolClass.getArm());
+        item.put("classCode", schoolClass.getClassCode());
+        item.put("category", schoolClass.getCategory());
+        item.put("description", schoolClass.getDescription());
+        item.put("capacity", schoolClass.getCapacity());
+        item.put("studentCount", studentCount);
+        item.put("subjects", subjects);
+        item.put("isFormTeacher", isFormTeacher);
+
+        if (schoolClass.getClassTeacher() != null) {
+            item.put("classTeacherId", schoolClass.getClassTeacher().getId());
+            item.put(
+                    "classTeacherName",
+                    (schoolClass.getClassTeacher().getFirstName() == null ? "" : schoolClass.getClassTeacher().getFirstName()) +
+                            " " +
+                            (schoolClass.getClassTeacher().getLastName() == null ? "" : schoolClass.getClassTeacher().getLastName())
+            );
+        } else {
+            item.put("classTeacherId", null);
+            item.put("classTeacherName", null);
+        }
+
+        return item;
+    }
 
     @GetMapping
     public ResponseEntity<List<TeacherDTO>> getAllTeachers() {
@@ -385,43 +498,25 @@ public class TeacherController {
         return ResponseEntity.ok(TeacherDTO.fromEntity(teacher));
     }
 
-
-
-
-    private SchoolClass validateTeacherOwnsClass(Long classId) {
-        var currentUser = securityUtils.getCurrentUser();
-
-        if (currentUser.getTeacher() == null) {
-            throw new RuntimeException("This account is not linked to a teacher");
-        }
-
-        SchoolClass schoolClass = classRepository.findByIdWithTeacher(classId)
-                .orElseThrow(() -> new RuntimeException("Class not found"));
-
-        if (schoolClass.getClassTeacher() == null
-                || !schoolClass.getClassTeacher().getId().equals(currentUser.getTeacher().getId())) {
-            throw new RuntimeException("Only the form teacher of this class can access this resource");
-        }
-
-        return schoolClass;
-    }
     @GetMapping("/me/subject-assignments")
     public ResponseEntity<?> getMySubjectAssignments() {
-        var currentUser = securityUtils.getCurrentUser();
-
-        if (currentUser.getTeacher() == null) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(Map.of("message", "This account is not linked to a teacher"));
-        }
-
-        Long teacherId = currentUser.getTeacher().getId();
+        Long teacherId = getCurrentTeacherId();
 
         List<Map<String, Object>> assignments = teacherSubjectRepository
                 .findByTeacher_IdOrderByClassNameAscClassArmAsc(teacherId)
                 .stream()
                 .map(ts -> {
                     Map<String, Object> item = new HashMap<>();
+
+                    SchoolClass schoolClass = null;
+                    if (ts.getClassName() != null && ts.getClassArm() != null) {
+                        schoolClass = classRepository
+                                .findByClassNameAndArmNormalized(ts.getClassName(), ts.getClassArm())
+                                .orElse(null);
+                    }
+
                     item.put("id", ts.getId());
+                    item.put("classId", schoolClass != null ? schoolClass.getId() : null);
                     item.put("subjectId", ts.getSubject() != null ? ts.getSubject().getId() : null);
                     item.put("subjectName", ts.getSubject() != null ? ts.getSubject().getName() : null);
                     item.put("className", ts.getClassName());
@@ -432,58 +527,51 @@ public class TeacherController {
 
         return ResponseEntity.ok(assignments);
     }
+
     @GetMapping("/me/classes")
     public ResponseEntity<?> getMyClasses() {
-        var currentUser = securityUtils.getCurrentUser();
+        Long teacherId = getCurrentTeacherId();
 
-        if (currentUser.getTeacher() == null) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(Map.of("message", "This account is not linked to a teacher"));
-        }
-
-        Long teacherId = currentUser.getTeacher().getId();
-
-        List<TeacherSubject> teacherSubjectAssignments =
+        List<SchoolClass> formClasses = classRepository.findByClassTeacherIdWithTeacher(teacherId);
+        List<TeacherSubject> subjectAssignments =
                 teacherSubjectRepository.findByTeacher_IdOrderByClassNameAscClassArmAsc(teacherId);
 
-        List<ClassResponseDTO> classes = classRepository.findByClassTeacherIdWithTeacher(teacherId)
-                .stream()
-                .map(schoolClass -> {
-                    int studentCount = studentRepository.findByClassScopeNormalized(
-                            schoolClass.getClassName(),
-                            schoolClass.getArm()
-                    ).size();
+        Map<String, SchoolClass> merged = new LinkedHashMap<>();
 
-                    List<String> subjects = teacherSubjectAssignments.stream()
-                            .filter(ts ->
-                                    ts.getClassName() != null &&
-                                            ts.getClassArm() != null &&
-                                            ts.getClassName().trim().equalsIgnoreCase(
-                                                    schoolClass.getClassName() == null ? "" : schoolClass.getClassName().trim()
-                                            ) &&
-                                            ts.getClassArm().trim().equalsIgnoreCase(
-                                                    schoolClass.getArm() == null ? "" : schoolClass.getArm().trim()
-                                            )
+        for (SchoolClass schoolClass : formClasses) {
+            merged.put(classKey(schoolClass.getClassName(), schoolClass.getArm()), schoolClass);
+        }
+
+        for (TeacherSubject ts : subjectAssignments) {
+            if (ts.getClassName() == null || ts.getClassArm() == null) {
+                continue;
+            }
+
+            classRepository.findByClassNameAndArmNormalized(ts.getClassName(), ts.getClassArm())
+                    .ifPresent(schoolClass ->
+                            merged.putIfAbsent(
+                                    classKey(schoolClass.getClassName(), schoolClass.getArm()),
+                                    schoolClass
                             )
-                            .map(ts -> ts.getSubject().getName())
-                            .distinct()
-                            .toList();
+                    );
+        }
 
-                    return ClassResponseDTO.fromEntity(schoolClass, studentCount, subjects);
-                })
-                .toList();
+        List<Map<String, Object>> classes = merged.values().stream()
+                .sorted(Comparator
+                        .comparing((SchoolClass c) -> normalize(c.getClassName()))
+                        .thenComparing(c -> normalize(c.getArm())))
+                .map(schoolClass -> buildTeacherClassResponse(schoolClass, teacherId, subjectAssignments))
+                .collect(Collectors.toList());
 
         return ResponseEntity.ok(classes);
     }
 
     @GetMapping("/me/classes/{classId}/students")
     public ResponseEntity<?> getMyClassStudents(@PathVariable Long classId) {
-        SchoolClass schoolClass = validateTeacherOwnsClass(classId);
+        SchoolClass schoolClass = validateTeacherCanAccessClass(classId);
 
-        List<StudentResponseDTO> students = studentRepository.findByClassScopeNormalized(
-                        schoolClass.getClassName(),
-                        schoolClass.getArm()
-                )
+        List<StudentResponseDTO> students = studentRepository
+                .findBySchoolClassIdOrderByLastNameAscFirstNameAsc(schoolClass.getId())
                 .stream()
                 .map(StudentResponseDTO::fromStudent)
                 .toList();
@@ -497,7 +585,7 @@ public class TeacherController {
             @RequestParam String session,
             @RequestParam Result.Term term) {
 
-        SchoolClass schoolClass = validateTeacherOwnsClass(classId);
+        SchoolClass schoolClass = validateTeacherOwnsFormClass(classId);
 
         return ResponseEntity.ok(
                 resultService.getClassRankings(
@@ -516,7 +604,7 @@ public class TeacherController {
             @RequestParam String session,
             @RequestParam Result.Term term) {
 
-        SchoolClass schoolClass = validateTeacherOwnsClass(classId);
+        SchoolClass schoolClass = validateTeacherCanAccessClass(classId);
 
         return ResponseEntity.ok(
                 attendanceService.getClassAttendance(
@@ -534,12 +622,10 @@ public class TeacherController {
             @PathVariable Long classId,
             @RequestBody TeacherClassAttendanceRequest request) {
 
-        SchoolClass schoolClass = validateTeacherOwnsClass(classId);
+        SchoolClass schoolClass = validateTeacherCanAccessClass(classId);
 
-        List<Student> classStudents = studentRepository.findByClassScopeNormalized(
-                schoolClass.getClassName(),
-                schoolClass.getArm()
-        );
+        List<Student> classStudents = studentRepository
+                .findBySchoolClassIdOrderByLastNameAscFirstNameAsc(schoolClass.getId());
 
         List<Long> allowedStudentIds = classStudents.stream()
                 .map(Student::getId)
